src/styles.css
* {
  box-sizing: border-box;
}

html {
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

h1 {
  text-align: center;
  padding: 24px 0 48px 0;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.showcase-item {
  display: grid;
  place-items: center;
}

.container {
  width: 100%;
}

.container > * {
  text-align: center;
  margin: 0 auto;
}

/* Dropdown */

.dropdown {
  position: relative;
}

.dropdown-1 {
  width: 300px;
  display: flex;
  align-items: center;
  background-color: rgb(51, 154, 240);
  color: white;
  font-weight: 500;
  padding: 16px 24px;
  cursor: pointer;
}

.arrow {
  margin-left: auto;
  font-size: 1.4rem;
}

.dropdown-menu {
  width: 100%;
  position: absolute;
  top: 100%;
  left: 0;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.dropdown-menu-1 {
  top: calc(100% + 8px);
}

.dropdown-menu-animated {
  transition: all;
  transform: translateY(-60px);
  visibility: hidden;
  opacity: 0;
}

.dropdown-menu-animated.open {
  transform: translateY(0px);
  opacity: 1;
  visibility: visible;
}

.dropdown-menu-1 li {
  font-weight: normal;
  background-color: white;
  color: rgb(150, 150, 150);
  padding: 18px 24px 18px 20px;
  border-left: 4px solid transparent;
}

.dropdown-menu-1 li.current,
.dropdown-menu-1 li:hover {
  border-color: rgb(51, 154, 240);
  color: rgb(90, 90, 90);
}

.dropdown-menu-1 li:not(:last-child) {
  border-bottom: 1px solid rgb(198, 198, 198);
}

/* Mobile Menu */

.current-selected {
  color: rgb(85, 85, 85);
  margin-bottom: 8px;
}

.mobile-menu {
  width: 80%;
  background-color: white;
}

.mobile-menu > ul {
  display: flex;
  align-items: stretch;
  border: 1px solid rgb(210, 210, 210);
}

.mobile-menu li {
  padding: 12px 24px;
  color: rgb(85, 85, 85);
  cursor: pointer;
  flex: 1;
  text-align: center;
}

.mobile-menu li:hover {
  background-color: rgb(210, 210, 210);
}

.mobile-menu .more {
  padding-right: 18px;
}

.mobile-menu .text {
  display: flex;
}

.mobile-menu .down {
  padding-left: 8px;
  margin-left: auto;
}

.dropdown-menu-2 {
  top: calc(100% + 8px);
}

.dropdown-menu-2 li {
  color: rgb(150, 150, 150);
}

.dropdown-menu-2 li:hover {
  color: inherit;
}

.dropdown-menu-2 li:not(:last-child) {
  border-bottom: 1px solid rgb(198, 198, 198);
}

